fixes + areas + loc

--- a/localisation/TD_01_flavour_pohjoismaa_l_english.yml
+++ b/localisation/TD_01_flavour_pohjoismaa_l_english.yml
@@ -84,3 +84,21 @@
  puid_into_the_unknown_desc:0 "Stories and rumors of what treasures lie in the north are popular amongst our peasants. The land of golden trees, honey rivers and frozen giants is free for the taking!"
  puid_societal_innovations:0 "Societal Innovations"
  puid_societal_innovations_desc:0 "Our nation has come a long way, from many dispersed tribes to a strong and centralized kingdom. Nobody can predict what future will bring us, but we will surely adapt to remain powerful and united."
+
+ maalopp_ideas:0 "Maaloppian Ideas"
+ maalopp_ideas_bonus:0 "Maaloppian Ambition"
+ maalopp_ideas_start:0 "Maaloppian Traditions"
+ maalopp_hub_of_eastern_trading:0 "The Hub of Eastern Trading"
+ maalopp_hub_of_eastern_trading_desc:0 "Having one of the few ports in Merkaatimaa, we always had a great share of merchants trading in our borders."
+ maalopp_uusadma:0 "Uusadma"
+ maalopp_uusadma_desc:0 "After disastrous floods of the early 1300s, new ports had to be build in order to restore the economy of the region. The most important of those was the town of Uusadma which serves its purpose to this day."
+ maalopp_cutting_edge_fortifications:0 "Cutting Edge Fortifications"
+ maalopp_cutting_edge_fortifications_desc:0 "Connections with the west were always a boon to our people. Taedian merchants wanted our cities to thrive to increase their own income, so they brought new technologies with them."
+ maalopp_liemarian_harbor:0 "Liemarian Harbor"
+ maalopp_liemarian_harbor_desc:0 "While most of Pohjoismaa didn't convert to Liemarianism following the wave of missionaries, we embraced this religions as a sign of unity with the friends across the sea, leading to many Tummic Liemarians settling in our borders."
+ maalopp_embracing_deforestation:0 "Embracing Deforestation"
+ maalopp_embracing_deforestation_desc:0 "Most of the land of Maalopp is unsuitable for permanent agriculture. To increase our food production, we need to embrace deforestation to make room for the new farmland."
+ maalopp_roovlaev_campaign:0 "Roovlaev"
+ maalopp_roovlaev_campaign_desc:0 "Our sailors' tactic during sea battles is to separate the enemy ships and defeat them individually. This strategy really shined during the wars against the Mutovan pirates, when our ships managed to defeat a far larger fleet of the enemy."
+ maalopp_sininesaal:0 "Sininesaal"
+ maalopp_sininesaal_desc:0 "Meaning 'The Blue Hall' in lounaväki language, this great room is a place for the lord's council to meet and discuss issues in the country. It's famous for the rich baroque decorations with many sea motifs."
