--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -797,3 +797,49 @@
  sakaiko_area:0 "Sakaiko"
  north_yabuhan_islands_area:0 "North Yabuha Islands"
  south_yabuhan_islands_area:0 "South Yabuha Islands"
+
+ buidar_sea_area:0 "Buidar Sea"
+ east_sahilan_coast_area:0 "East Sahilan Coast"
+ south_pemenian_coast_area:0 "South Pemenian Coast"
+ bien_giura_sea_area:0 "Bien Giura Sea"
+ sudian_sea_area:0 "Sudian Sea"
+ outer_pisachaian_ocean_area:0 "Outer Pisachaian Ocean"
+ karan_sea_area:0 "Karan Sea"
+ south_kindulian_sea_area:0 "South Kindulian Sea"
+ north_kindulian_sea_area:0 "North Kindulian Sea"
+ laut_dalam_area:0 "Laut Dalam"
+ buubu_area:0 "Buubu"
+ fiusga_area:0 "Fiusga"
+ kemaliu_area:0 "Kemaliu"
+ matyaf_area:0 "Matyaf"
+ anifini_area:0 "Anifini"
+ kichaman_area:0 "Kichaman"
+ muunwup_area:0 "Muunwup"
+ wanewan_area:0 "Wanewan"
+ fuhmet_area:0 "Fuhment"
+ yatlao_area:0 "Yatlao"
+ mieda_area:0 "Mieda"
+ asubulu_area:0 "Asubulu"
+ daodoga_area:0 "Daodoga"
+ east_pisachaian_islands_area:0 "East Pisachaian Islands"
+ east_aminian_islands_area:0 "East Aminian Islands"
+ doi_kyn_lan_area:0 "Doi Kyn Lan"
+ chanh_den_area:0 "Chanh Den"
+ cau_tram_area:0 "Cau Tram"
+ cua_giao_area:0 "Cua Giao"
+ nam_luy_area:0 "Nam Luy"
+ song_den_area:0 "Song Den"
+ soui_tien_area:0 "Soui Tien"
+ ram_den_area:0 "Ram Den"
+ cu_rang_area:0 "Cu Rang"
+ mau_vang_area:0 "Mau Vang"
+ thung_mo_area:0 "Thung Mo"
+ giao_cha_area:0 "Giao Cha"
+ moung_ngu_area:0 "Moung Ngu"
+ daan_xai_area:0 "Daan Xai"
+ xaiprakhan_area:0 "Xaiprakhan"
+ sawanabhum_area:0 "Sawanabhum"
+ lum_nam_rath_area:0 "Lum Nam Rath"
+ surath_area:0 "Surath"
+ sibsakha_area:0 "Sibsakha"
+ sarakhant_area:0 "Sarakhan"
