--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4050,7 +4050,7 @@
  PROV4049:0 "4049"
  PROV4050:0 "4050"
  PROV4051:0 "4051"
- PROV4052:0 "4052"
+ PROV4052:0 "Tummic Lakes"
  PROV4053:0 "4053"
  PROV4054:0 "4054"
  PROV4055:0 "4055"
