--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -71,3 +71,4 @@
  LIBERTY_DESIRE_E_25:0 "Liberty Desire under 25"
  LIBERTY_DESIRE_E_10:0 "Liberty Desire under 10"
  SAME_RELIGION_E:0 "Same Religion"
+ AI_E:0 "Is an Artificial Intelligence"
