--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -479,3 +479,11 @@
  rambutako:0 "Rambutako"
  likuruma:0 "Likuruma"
  burikat:0 "Burikat"
+ 
+ ta_trai_group:0 "Ta-Trâi"
+ kai:0 "Kái"
+ chud:0 "Chut"
+ nai:0 "Nài"
+ bay:0 "Bay"
+ nau:0 "Nâu"
+ phong:0 "Phong"
