--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1251,3 +1251,23 @@
  ABA_ADJ:0 "Abalokian"
  HNP:0 "Hanpyan"
  HNP_ADJ:0 "Hanpyanese"
+ DLC:0 "Dong Loc"
+ DLC_ADJ:0 "Dong Lacese"
+ LAH:0 "Lac Ha"
+ LAH_ADJ:0 "Lac Ha"
+ DNV:0 "Dinh Vong"
+ DNV_ADJ:0 "Dinh Vong"
+ HCN:0 "Hac An"
+ HCN_ADJ:0 "Hac An"
+ KPH:0 "Kim Phong"
+ KPH_ADJ:0 "Kim Phong"
+ TIN:0 "Thien An"
+ TIN_ADJ:0 "Thien An"
+ THN:0 "Thanh Ha"
+ THN_ADJ:0 "Thanh Ha"
+ DMS:0 "Dam Sen"
+ DMS_ADJ:0 "Dam Sen"
+ DIC:0 "Dieu Chau"
+ DIC_ADJ:0 "Dieu Chau"
+ VAH:0 "Van Hai"
+ VAH_ADJ:0 "Van Hai"
