--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -472,3 +472,24 @@
  saelian_emperors_guard_desc:0 "The most famous military unit in this part of the world - Emperor's Guard - is synonymous with efficiency, discipline and loyalty to the state. They played a major part in many early medieval conflicts, especially during the invasion of Camaria and conquest of Magreina. While some that it has traditions in the legion of Saelius, it wasn't officialy proclaimed until the third century. Their primary task was always to ensure the safety of the emperor, but they were often used during wars, to pacify rebels or ensure that negotiations go according to plan."
  saelian_pax_saeliana:0 "Pax Saeliana"
  saelian_pax_saeliana_desc:0 "When people talk about 'The Saelian Peace' they often mean different things. Most see it as a historic period during the medieval era, known for its stability and prosperity which helped reinforce the empire as leading force on the continent. Some view it as every period of overall peace in the empire and general lack of conflict in the region. However, there is a more radical view - the peace in the world can only by attained through the Imperial Hegemony."
+
+ emperor_lippstadt_compromise:0 "Lippstadt Compromise"
+
+ request_gyrdian_claim_title:0 "Purchase the Gyrdian Claim"
+ request_gyrdian_claim_desc:0 "The land of gyrdians is full of dangerous heretics, barely loyal to the emperor and God. We have to bring order into this savage land."
+
+ incident_regnum_gyrdianicum:0 "Regnum Gyrdianicum"
+ incident_regnum_gyrdianicum_member_alert:0 "One of the marches in the empire has requested to purchase a claim to the lands in the north of their domain to increase the influence of the empire."
+ incident_regnum_gyrdianicum_emperor_alert:0 "One of the marches in the empire has requested to purchase a claim to the lands in the north of their domain to increase our influence there."
+ SE_incident.100.t:0 "Regnum Gyrdianicum"
+ SE_incident.100.desc:0 "The question of whether people of Gyrdia should be allowed to join the empire was always a heated debate. Staunch sigilianists believe that they are to prone to heresy and will never follow the true spirit of Saelianism, but many see in them hope for other nations to be more represented in the empire.\n Recently, the [regnum_gyrdianicum_ET.GovernmentName] of [regnum_gyrdianicum_ET.GetName] has offered the emperor to purchase the claim on 'the kingdom of Gyrdia' in exchange for gold and solely managing all military actions. The emperor commenced the emergency diet, knowing this would spark a controversial debate."
+ SE_incident.100.a:0 "We need to bring order in Gyrdia"
+ SE_incident.100.a_tt:0 "Gain claims on all provinces of Gyrdian culture.\n Emperor will be much more likely to grant the kingship."
+ SE_incident.100.b:0 "They do not deserve the claim."
+ SE_incident.100.c:0 "The Gyrdians are our friends"
+ SE_incident.101.t:0 "Imperial Proposal"
+ SE_incident.101.desc:0 "Following a heated debate in the recent imperial diet, the emperor has decided to grant us an invitation to the empire. How shall we respond?"
+ SE_incident.101.a:0 "We should join the Sigilian community."
+ SE_incident.101.b:0 "We will remain independent."
+ TD_invited_to_the_empire:0 "Invited us to the Empire"
+ TD_granted_us_gyrdia:0 "Sold us Gyrdia"
