--- a/localisation/TD_01_Flavour_Pamkusea_l_english.yml
+++ b/localisation/TD_01_Flavour_Pamkusea_l_english.yml
@@ -93,7 +93,7 @@
  achnith_ideas_start:0 "Achinthian Traditions"
  achnith_ideas_bonus:0 "Achinthian Ambition"
  achnith_sea_fire:0 "Sea Fire"
- achnith_sea_fire_desc:0 "Achnithian invetion of Sea Fire, a sticky substance that is easly flamable, and decision to use it on our galleys, our naval combat prowess has dramatically increased."
+ achnith_sea_fire_desc:0 "Achnithian invetion of Sea Fire, a sticky substance that is easily flamable, and decision to use it on our galleys, our naval combat prowess has dramatically increased."
  achnith_visparayan_fascination:0 "Visparayan Fascination"
  achnith_visparayan_fascination_desc:0 "Our country remains on the frontier of Visparayan invasion into Pamkusea, and is the only one that survived said invasion. But instead of hatred towards the Visparayans, we are fascinated by them, and want to learn more about different religious societies."
  achnith_our_sea:0 "Our Sea"
@@ -106,3 +106,21 @@
  achnith_sea_forts_desc:0 "With so long coasts as ours, defending it with only navy is practically impossible. To protect our lands and isles from naval invasion, we have invented a system of sea forts along the coasts, to make naval invasion of our homeland a hard endeavour."
  achnith_sailor_spirit:0 "Sailor Spirit"
  achnith_sailor_spirit_desc:0 "Our country is one dependent on sea, and some of our citizens spend more time on water than on land. With long naval tradition and heritage, our sailors are embodiment of the sailor spirit, and are ready to go down with the ship and it's captain."
+
+ apaxtaros_ideas:0 "Apaxtarian Ideas"
+ apaxtaros_ideas_bonus:0 "Apaxtarian Ambition"
+ apaxtaros_ideas_start:0 "Apaxtarian Traditions"
+ apaxtaros_aurangian_laws:0 "Aurangian Laws"
+ apaxtaros_aurangian_laws_desc:0 "Since our arrival to Pamkusea, this land had two distinc sets of laws - common laws of the Pamkusean people and our official laws we brought from Visparaya. In order to accomodate these systems and cultures, Aurang worked tirelessly to establish a new system of government in which both groups will be respected. The laws and books wrote by him were a foundation of a new state unified state."
+ apaxtaros_panourgian_monopoly:0 "Panourgian Monopoly"
+ apaxtaros_panourgian_monopoly_desc:0 "The economy around the Panourgian sea is divided between local productions, which provide the vast majority of food production, and imports and exports of more foreign or luxurious products. The citizens of southern Zakarturia and Gisia heavily rely on trade with us due to the easiest routes going through Kedipol which is sometimes referred to as the pearl of Panourgia. Thanks to our control over the sea we can very effectively enforce our tarrifs and rules."
+ apaxtaros_oligarchic_cooperation:0 "Oligarchic Cooperation"
+ apaxtaros_oligarchic_cooperation_desc:0 "The powerful Pamkusean oligarchs grew into power thanks to the trade deals with the Dashavi and Ehwitraw. After our takeover, many saw us as bringing them even more wealth thanks to our roots in the east. Those who joined us became the most loyal servants, but our enemies vanished into obscurity."
+ apaxtaros_sea_fire:0 "Sea Fire"
+ apaxtaros_sea_fire_desc:0 "Achnithian invetion of Sea Fire, a sticky substance that is easily flamable, has been a scourge of their enemies since its invention. It obviously was very effective against predominately wooden and cloth ships, but it also allowed them to much more effectively siege coastal settlements. After integration of the old Achnithian fleet, we inherited this wondrous invention."
+ apaxtaros_mixed_customs:0 "Mixed Customs"
+ apaxtaros_mixed_customs_desc:0 "The cultural blend which formed in Apaxtaros provides us with a curious case of two distinct groups of people forced to live together. Many pamkuseans now bow in the visparayan manner, but Dashavis read and analyze local poetry. Our people collectively builds the society of off each others cultures, customs and languages."
+ apaxtaros_zakarturi_frontier:0 "Zakarturi Frontier"
+ apaxtaros_zakarturi_frontier_desc:0 "Northern lands of Zakarturia is where the remnants of Pamkusean states and staunch mountainous kingdoms clash for domination and living space. Their instability grants us a perfect opportunity to strike and enrich our empire even more."
+ apaxtaros_new_days_of_pamkusea:0 "New Days of Pamkusea"
+ apaxtaros_new_days_of_pamkusea_desc:0 "The new age has finally came - Pamkusea is united under someone who respects their tradition and their culture. What comes forward is a period in which we will show the world our strength and splendor, with an army capable of withstanding forces thousands times stronger, fleet burning anyone even daring to come close, and economy providing the great powers with luxury."
