--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -18,9 +18,9 @@
  idea_protector_of_dorchean_isles_desc:0 "Argenia has always had ambitions to be the rulers od dorchean isles. Ever since invasion of njunnialmmuks from the east and due to growing mercantile influence of Ehrenstaat over the land and sea, many people voice for argenia to take the mantle of protector of dorchean isles, defending them from any outside threat, no matter the cost."
  
  
- group_dorchean_ideas:0 "Dorchean Ideas"
- group_dorchean_ideas_start:0 "Dorchean Traditions"
- group_dorchean_ideas_bonus:0 "Dorchean Ambition"
+ group_dorchean_ideas:0 "Dorchean Minor Ideas"
+ group_dorchean_ideas_start:0 "Dorchean Minor Traditions"
+ group_dorchean_ideas_bonus:0 "Dorchean Minor Ambition"
  dorchia_relentless_fight:0 "Relentless Fight"
  dorchia_relentless_fight_desc:0 "Ever since labosian people came to the dorchean isles, they were a target of foreign invasion. This made us very quick to react in case of a war and to fight in a war against the enemy."
  dorchia_lessons_of_argenian_wars:0 "Lessons of Argenian Wars"
@@ -125,3 +125,21 @@
  caidthmor_integration_of_ehren_minorities_desc:0 "Ever since ehren traders came and settled in the Dorchean islands, many saw them as another invader. But as the time went by, many grew accustomed to them and often engage with them to trade. As of now they are valuable members of our nation and some of the few things that connect us to the continent."
  caidthmor_repurposing_old_tactics:0 "Repurposing Old Tactics"
  caidthmor_repurposing_old_tactics_desc:0 "Argenian conquest has shown our population that military tactics applied in our isles were years behind the continent. But a few centuries later with the introduction of gunpowder many of our great leaders dust off the old books of strategy to rediscover what was once lost."
+
+ dorchia_ideas:0 "Dorchean Ideas"
+ dorchia_ideas_bonus:0 "Dorchean Ambition"
+ dorchia_ideas_start:0 "Dorchean Traditions"
+ dorchia_dorchean_fisheries:0 "Dorchean Fisheries"
+ dorchia_dorchean_fisheries_desc:0 "Vast majority of food production in our nation comes from fishing. Thanks to the mixing of warm and cold currents our sailors can fish very effectively without depopulating the seas."
+ dorchia_common_adbar:0 "Common Adbar"
+ dorchia_common_adbar_desc:0 "The Adbar is a council of the most important and influential nobles in the nation. It originally was more local, but with the unification of the isles the kings used it as a way to discuss matters and more effectively administer the nation."
+ dorchia_legends_of_talamgalt:0 "The Legends of Talamgalt"
+ dorchia_legends_of_talamgalt_desc:0 "People always wondered what lies beyond the great sea. These dreams manifested into the idea of Talamgalt - a mystical promised land in which all worldly problems disappear. While merely a folk tale, many believe there is some truth to it."
+ dorchia_saelian_devotion:0 "Saelian Devotion"
+ dorchia_saelian_devotion_desc:0 "Dorchean Saelianism is far different than the continental variant. While they focus on the prophetic aspect of Saelius, we know that in reality he was the God who descended onto the earth to save us."
+ dorchia_dorchean_renaissance:0 "Dorchean Renaissance"
+ dorchia_dorchean_renaissance_desc:0 "Early XVI century was a period of stability in the isles which allowed our arts and philosophy to flourish. Many were inspired by pre-saelian patterns and woodworking which they integrated with modern technological innovations to build beautiful palaces and weave mythological tapestry."
+ dorchia_open_sea_whaling:0 "Open Sea Whaling"
+ dorchia_open_sea_whaling_desc:0 "Dangerous western seas may seem barren at first, but they hold large population of whales, which are the sources of many sought after commodities such as oils, their meat and ambergris."
+ dorchia_dalvian_currents:0 "Dalvian Currents"
+ dorchia_dalvian_currents_desc:0 "Winds in the Dalvian waters always blow west. This means that any lost sailor will never see his home again, but there is also some positive aspects to this phenomenon - we can relatively quickly travel to the new world."
