--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1634,14 +1634,14 @@
  PROV1633:0 "Western Sea of Oiva"
  PROV1634:0 "Memgawat"
  PROV1635:0 "Jääkarhuni Sea"
- PROV1636:0 "1636"
+ PROV1636:0 "Mebishikwa"
  PROV1637:0 "Tuwaheckv"
  PROV1638:0 "Ulwatij"
  PROV1639:0 "Saqpawaq"
  PROV1640:0 "Panqetqa"
  PROV1641:0 "Gipcha"
- PROV1642:0 "1642"
- PROV1643:0 "1643"
+ PROV1642:0 "Senpakagos"
+ PROV1643:0 "Mebiton"
  PROV1644:0 "Nackavoche"
  PROV1645:0 "Sentveka"
  PROV1646:0 "Sobohali Range"
@@ -1651,18 +1651,18 @@
  PROV1650:0 "Emehick"
  PROV1651:0 "Khutigar Bay"
  PROV1652:0 "Hefkalopi"
- PROV1653:0 "1653"
- PROV1654:0 "1654"
- PROV1655:0 "1655"
+ PROV1653:0 "Tekambe"
+ PROV1654:0 "Amoyuk"
+ PROV1655:0 "Sugnag"
  PROV1656:0 "Dalugsiwa"
  PROV1657:0 "Outer Khutigar Bay"
  PROV1658:0 "Kosara"
- PROV1659:0 "1659"
+ PROV1659:0 "Pkamiwuk"
  PROV1660:0 "Gichiga"
  PROV1661:0 "Kahilese"
  PROV1662:0 "North Pemenian Coast"
  PROV1663:0 "Papachisen"
- PROV1664:0 "1664"
+ PROV1664:0 "Shawke"
  PROV1665:0 "Borveren"
  PROV1666:0 "Sitsewijk"
  PROV1667:0 "Nefaleenveld"
@@ -1735,7 +1735,7 @@
  PROV1734:0 "Dzegav"
  PROV1735:0 "Makvar"
  PROV1736:0 "Gycaly"
- PROV1737:0 "1737"
+ PROV1737:0 "Ginimekuk"
  PROV1738:0 "Holsyak"
  PROV1739:0 "Osmalig"
  PROV1740:0 "Dysameg"
@@ -1772,21 +1772,21 @@
  PROV1771:0 "Nestekhara"
  PROV1772:0 "Hirahirawa"
  PROV1773:0 "Sutrani Bay"
- PROV1774:0 "1774"
+ PROV1774:0 "Nitwedon"
  PROV1775:0 "Svatini Coast"
- PROV1776:0 "1776"
- PROV1777:0 "1777"
- PROV1778:0 "1778"
- PROV1779:0 "1779"
- PROV1780:0 "1780"
+ PROV1776:0 "Shoken"
+ PROV1777:0 "Weyoso"
+ PROV1778:0 "Nagituk"
+ PROV1779:0 "Yabe"
+ PROV1780:0 "Bidan"
  PROV1781:0 "Wadagisik"
- PROV1782:0 "1782"
- PROV1783:0 "1783"
- PROV1784:0 "1784"
+ PROV1782:0 "Shepamians"
+ PROV1783:0 "Shenake"
+ PROV1784:0 "Mentose"
  PROV1785:0 "Outer Sangari Sea"
- PROV1786:0 "1786"
+ PROV1786:0 "Pugande"
  PROV1787:0 "Amealungali Coast"
- PROV1788:0 "1788"
+ PROV1788:0 "Agoyugen"
  PROV1789:0 "Mayagzad"
  PROV1790:0 "Saramaran"
  PROV1791:0 "Aqamagew"
@@ -1808,8 +1808,8 @@
  PROV1807:0 "1807"
  PROV1808:0 "1808"
  PROV1809:0 "1809"
- PROV1810:0 "1810"
- PROV1811:0 "1811"
+ PROV1810:0 "Kapishe"
+ PROV1811:0 "Kagenok"
  PROV1812:0 "Maskazhi"
  PROV1813:0 "Giziziib"
  PROV1814:0 "1814"
@@ -1845,33 +1845,33 @@
  PROV1844:0 "Zhaamashka"
  PROV1845:0 "Tarhianahcoill"
  PROV1846:0 "Tarhianahcoill"
- PROV1847:0 "1847"
- PROV1848:0 "1848"
+ PROV1847:0 "Pugoje"
+ PROV1848:0 "Wiwikmane"
  PROV1849:0 "Nogoontengis"
- PROV1850:0 "1850"
- PROV1851:0 "1851"
- PROV1852:0 "1852"
+ PROV1850:0 "Ahwaknu"
+ PROV1851:0 "Dantaku"
+ PROV1852:0 "Gyeyun"
  PROV1853:0 "Apnaq"
  PROV1854:0 "Yag"
- PROV1855:0 "1855"
+ PROV1855:0 "Yapiniso"
  PROV1856:0 "1856"
- PROV1857:0 "1857"
- PROV1858:0 "1858"
- PROV1859:0 "1859"
+ PROV1857:0 "Donakekce"
+ PROV1858:0 "Gwinen"
+ PROV1859:0 "Kodmena"
  PROV1860:0 "1860"
  PROV1861:0 "1861"
  PROV1862:0 "1862"
- PROV1863:0 "1863"
- PROV1864:0 "1864"
- PROV1865:0 "1865"
+ PROV1863:0 "Moshika"
+ PROV1864:0 "Denbane"
+ PROV1865:0 "Takeshun"
  PROV1866:0 "Horkopasko"
- PROV1867:0 "1867"
- PROV1868:0 "1868"
+ PROV1867:0 "Cikasa"
+ PROV1868:0 "Shkotenak"
  PROV1869:0 "1869"
  PROV1870:0 "1870"
  PROV1871:0 "1871"
  PROV1872:0 "1872"
- PROV1873:0 "1873"
+ PROV1873:0 "Wajikogun"
  PROV1874:0 "Husehe"
  PROV1875:0 "Niraikali Coast"
  PROV1876:0 "Yesateu"
