--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -107,12 +107,12 @@
 
  steppe_nomads_settling_down_title:0 "Settling Down"
  steppe_nomads_settling_down_desc:0 ""
- steppe_nomads_embracing_next_institution_grants_admin_tech_tt:0 "Upon Embracing next institution, we will get an §YAdministrative Technology§! for free"
+ steppe_nomads_embracing_next_institution_grants_admin_tech_tt:0 "Upon Embracing the next institution, we will get an §YAdministrative Technology§! for free"
 
  steppe_nomads_nomadic_unity_title:0 "Nomadic Unity"
  steppe_nomads_nomadic_unity_desc:0 ""
 
- steppe_nomads_strenght_in_numbers_title:0 "Strenght in Numbers"
- steppe_nomads_strenght_in_numbers_desc:0 ""
- has_won_atleast_4_wars_tt:0 "Has won atleast §Y4 Wars§!"
- steppe_nomads_unification_gives_free_mana_tt:0 "On §YProclaiming One Horde§! we will get extra §G25 Power Points§! of each category"
+ steppe_nomads_strength_in_numbers_title:0 "Strength in Numbers"
+ steppe_nomads_strength_in_numbers_desc:0 ""
+ steppe_nomads_unification_gives_free_mana_tt:0 "Upon §YProclaiming One Horde§! we will get extra §G25§! of each power."
+ lose_current_missions_tt:0 "You will lose access to your current missions."
