--- a/localisation/TD_01_flavour_bkuslcuht_region_l_english.yml
+++ b/localisation/TD_01_flavour_bkuslcuht_region_l_english.yml
@@ -18,9 +18,9 @@
  kabonen_modernized_ship_design:0 "Modernized Ship Designs"
  kabonen_modernized_ship_design_desc:0 "Navy is lifeline of our land, without it, we will cease to exist, crushed by the outside powers. We need to do everything to make sure our ships are best of the best, and to achieve that we will invite forgein ship designers from Taedium."
  
- cak_kecig_group_ideas:0 "Cak Kecig Ideas"
- cak_kecig_group_ideas_start:0 "Cak Kecig Traditions"
- cak_kecig_group_ideas_bonus:0 "Cak Kecig Ambition"
+ cak_kecig_group_ideas:0 "Cak Kecig Minor Ideas"
+ cak_kecig_group_ideas_start:0 "Cak Kecig Minor Traditions"
+ cak_kecig_group_ideas_bonus:0 "Cak Kecig Minor Ambition"
  cak_kecig_in_middle_of_the_trade_routes:0 "Crossroads of Pemenian trade"
  cak_kecig_in_middle_of_the_trade_routes_desc:0 "These lands are in the crossroads of the Pemenian continent, making it a frequently visited place for merchants, and increasing value of our coffers."
  cak_kecig_iav_karbium:0 "Iav Karbium"
