--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -75,15 +75,15 @@
  
  ability_steppe_nomads_mechanic:0 "Kakigian Horde Mechanic"
  tribal_loyalty_power:0 "Tribal Loyalty"
- tribal_loyalty_power_desc:0 "No desc for the moment"
+ tribal_loyalty_power_desc:0 "Tribal Loyalty represents how much trust tribes put in the [Root.GetTitle].\n§YIncreased by:§!\n-having high ruler military skill\n-winning wars\n-having high power projection\n-having high horde unity\n-having high prestige\n-having specific ruler personalities\n§YDecreased by:§!\n-having low ruler military skill\n-using government interactions\n-losing wars"
  monthly_tribal_loyalty_power:0 "Monthly Tribal Loyalty"
  tribal_loyalty_power_gain_modifier:0 "Tribal Loyalty Modifier"
  gather_the_host_power:0 "Gather the Host"
- gather_the_host_power_desc:0 "WIP"
+ gather_the_host_power_desc:0 "Bring together the fine horsemen of our tribe to show the might of [Root.GetName]!"
  edict_of_progress_power:0 "Edict of Progress"
- edict_of_progress_power_desc:0 "WIP"
+ edict_of_progress_power_desc:0 "Force our people to embrace new advancements."
  extert_our_power_power:0 "Extert our Power"
- extert_our_power_power_desc:0 "WIP"
+ extert_our_power_power_desc:0 "Show our subjects who is really in charge of our area."
  steppe_ruler_0_mil:0 "Our Monarch has 0 Military Skill"
  steppe_ruler_1_mil:0 "Our Monarch has 1 Military Skill"
  steppe_ruler_2_mil:0 "Our Monarch has 2 Military Skill"
