missing loc + map

--- a/localisation/TD_01_flavour_achiqnay_l_english.yml
+++ b/localisation/TD_01_flavour_achiqnay_l_english.yml
@@ -3,3 +3,5 @@
  high_kingdom_reform_desc:0 "People of Achiqnatar had to adapt to harsh mountainous environments. This terrain made it historically very hard to unite and administer the region."
  holy_city_reform:0 "Holy City"
  holy_city_reform_desc:0 "The most sacred city Achiqnay faith brings a great deal of prestige and pilgrim cash."
+ exiled_colonists_reform:0 "Exiled Colonists"
+ exiled_colonists_reform_desc:0 "Our people were exiled to this land after many brutal conflicts in the homeland."
