--- a/localisation/TD_01_flavour_camaria_l_english.yml
+++ b/localisation/TD_01_flavour_camaria_l_english.yml
@@ -55,3 +55,5 @@
 
  fattoria_nobiliare_reform:0 "Fattoria Nobiliare"
  fattoria_nobiliare_reform_desc:0 "Large swats of arable land with at most 2 types of different crops owned by the nobles are more efficient in maintaining high level of production than smaller estates."
+
+ CAP_left_league:0 "Left our League"
