--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -131,6 +131,10 @@
  PEACE_po_randwerpen_victorious:0 "Banish Ehrenstaat"
  po_randwerpen_victorious_desc:0 "We will take lands that Ehrenstaat hold directly and get an event to decide about fate of their Nifthemi puppets"
  WAR_FOR_NIFTHEM_WN:0 "War For Nifthem"
+ po_ehrenstaat_victorious:0 "Conquer Nifthem"
+ CB_ALLOWED_po_ehrenstaat_victorious:0 "Conquer Nifthem"
+ po_randwerpen_victorious:0 "Banish Ehrenstaat"
+ CB_ALLOWED_po_randwerpen_victorious:0 "Banish Ehrenstaat"
 
  #### Ehren Civil War
 
