--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -6,6 +6,9 @@
  colonizers_pushed_back_tooltip:0 "Colonists fear too much for their life and won't try to settle this province again."
  
  CB_ALLOWED_po_push_back_colonizers_taedium:0 "Push Back Colonizers"
+ po_push_back_colonizers_taedium:0 "Push Back Colonizers"
+ po_push_back_colonizers_taedium_desc:0 "[From.GetName] will lose their colonies and will be unable to colonize our land."
+ PEACE_po_push_back_colonizers_taedium:0 "Push Back Colonizers"
 
  lounavaki_march_ideas:0 "Valvur Ideas"
  lounavaki_march_ideas_start:0 "Valvur Traditions"
@@ -88,6 +91,7 @@
  steppe_ruler_1_mil:0 "Our Monarch has 1 Military Skill"
  steppe_ruler_2_mil:0 "Our Monarch has 2 Military Skill"
  gathered_the_host:0 "Gathered the Host"
+ desc_gathered_the_host:0 "The independent horse riders have joined our ranks."
  gathered_the_host_cooldown:0 "Gathered the Host Cooldown"
  
  
@@ -116,3 +120,6 @@
  steppe_nomads_strength_in_numbers_desc:0 ""
  steppe_nomads_unification_gives_free_mana_tt:0 "Upon §YProclaiming One Horde§! we will get extra §G25§! of each power."
  lose_current_missions_tt:0 "You will lose access to your current missions."
+
+ kakigian_resettlement_ai_boost:0 "Self-Sustaining Colonies - AI buff"
+ desc_kakigian_resettlement_ai_boost:0 "Self-Sustaining Colonies - AI buff"
