--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -843,3 +843,4 @@
  surath_area:0 "Surath"
  sibsakha_area:0 "Sibsakha"
  sarakhant_area:0 "Sarakhan"
+ outer_niheyan_ocean_area:0 "Outer Niheyan Ocean"
