--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -1,6 +1,7 @@
 ﻿l_english:
+ dummy_reform:0 "Dummy!"
  tummic_herttuakunta_reform:0 "Herttuakunta"
- tummic_herttuakunta_reform_desc:0 "Herttuakunta DESC"
+ tummic_herttuakunta_reform_desc:0 "Tummic princedoms have courts compromised of very tight cultural communities."
  HERTTUAKUNTA:0 "Herttuakunta"
  2_HERTTUAKUNTA:0 "Päällikkö"
  3_HERTTUAKUNTA:0 "Grand Päällikkö"
