--- a/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
+++ b/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
@@ -33,6 +33,12 @@
 
  incident_ehsani_resurgence_title:0 "Ehšani Resurgence"
  incident_ehsani_resurgence_desc:0 "Growing influence of Ehšan Tiri has not only heavily influenced the modern Uttarian religion, but also shook the Rah Jadid World."
+ incident_teachings_of_aurang_title:0 "Teachings of Aurang"
+ incident_teachings_of_aurang_desc:0 ""
+ incident_devilish_dust_title:0 "Devilish Dust"
+ incident_devilish_dust_desc:0 ""
+ incident_rise_of_avukhima_title:0 "Rise of Avukhima"
+ incident_rise_of_avukhima_desc:0 ""
 
  rah_jadid_frankrani_laws:0 "Frankrani Laws"
  rah_jadid_frankrani_laws_desc:0 "Official doctrines consist of original Ilumist and Frankrani beliefs with marginal syncretism."
@@ -55,6 +61,7 @@
  rah_jadid_cohesion_increase_tt:0 "This will push us towards Tolerance in this incident"
  rah_jadid_cohesion_decrease_tt:0 "This will push us towards Persecution in this incident"
  home_of_ehsani_philosophy:0 "Home of the Ehšani Philosophy"
+ desc_home_of_ehsani_philosophy:0 "This is the root of all modern Ehšani teachings in Visparaya."
  ehsani_limited_influence_tt:0 "This will limit Ehšani influence"
  ehsani_growing_influence_tt:0 "This will cause Ehšani influence to grow"
 
