--- a/localisation/TD_01_flavour_geniburgh_company_l_english.yml
+++ b/localisation/TD_01_flavour_geniburgh_company_l_english.yml
@@ -19,12 +19,16 @@
  geniburgh_decrease_power:0 "Raise the Recruits"
  geniburgh_decrease_power_desc:0 "Conscript new soldiers from the nearby settlements."
  NAR_recruits_raised:0 "Recruits Raised"
+ desc_NAR_recruits_raised:0 "This province recently voluntarily sent their men to join the army."
  geniburgh_spend_power_for_modifier:0 "Bribe local rulers"
  geniburgh_spend_power_for_modifier_desc:0 "'Convince' lords of these lands to submit to our will."
  NAR_bribed_local_rulers:0 "Bribed local rulers"
+ desc_NAR_bribed_local_rulers:0 "Local chiefs in this province are now more loyal for some unknown reason."
  geniburgh_increase_power:0 "Invest in the Administration"
  geniburgh_increase_power_desc:0 "Increase our efforts in establishing nation-wide administration."
  NAR_Reform_into_a_real_country_TT:0 "§YGeniburgh Company§! will get an event to reform into §YNiewebehatland§!."
+ NAR_locals_respected:0 "Locals Respected"
+ desc_NAR_locals_respected:0 "The local population was given autonomy in some of their affairs."
  geniburgh_company.1.t:0 "Assuming Kakigian Identity"
  geniburgh_company.1.desc:0 "As we settle into this new and strange land, it becomes clear that we have grown beyond a mere mercenary company. We now need to embrace our new identity. Many are wondering about the nature of our new nation. Should we stick to our meritocratic traditions? Or should [Root.Monarch.GetName] become a monarch?"
  geniburgh_company.1.a:0 "Let's reform into a Republic!"
