--- a/localisation/TD_subject_types_l_english.yml
+++ b/localisation/TD_subject_types_l_english.yml
@@ -13,4 +13,5 @@
  integrate_into_government_tooltip:0 "Turn our Trade Dependency into a proper vassal state"
  SUBJECT_20_YEARS:0 "has been our subject for at least 10 years" 
  integrate_into_government:0 "[From.GetName] will be turned into our vassal."
+ integrate_into_government_desc:0 "They will become our vassal state."
  
