--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2556,7 +2556,7 @@
  PROV2555:0 "2555"
  PROV2556:0 "2556"
  PROV2557:0 "2557"
- PROV2558:0 "2558"
+ PROV2558:0 "Bashipistan Coast"
  PROV2559:0 "2559"
  PROV2560:0 "2560"
  PROV2561:0 "2561"
@@ -2678,12 +2678,12 @@
  PROV2677:0 "2677"
  PROV2678:0 "2678"
  PROV2679:0 "2679"
- PROV2680:0 "2680"
+ PROV2680:0 "Posalan Coast"
  PROV2681:0 "Central Tsinhoi Gulf"
- PROV2682:0 "2682"
+ PROV2682:0 "Kwokuen Sea"
  PROV2683:0 "2683"
  PROV2684:0 "2684"
- PROV2685:0 "2685"
+ PROV2685:0 "Shauseng Coast"
  PROV2686:0 "2686"
  PROV2687:0 "2687"
  PROV2688:0 "2688"
