--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2486,40 +2486,40 @@
  PROV2485:0 "Awachi"
  PROV2486:0 "2486"
  PROV2487:0 "2487"
- PROV2488:0 "2488"
- PROV2489:0 "2489"
- PROV2490:0 "2490"
- PROV2491:0 "2491"
- PROV2492:0 "2492"
- PROV2493:0 "2493"
+ PROV2488:0 "Seeha"
+ PROV2489:0 "Mayasuul"
+ PROV2490:0 "Tlakan"
+ PROV2491:0 "Etate"
+ PROV2492:0 "Bawamoia"
+ PROV2493:0 "Tajiran"
  PROV2494:0 "2494"
  PROV2495:0 "2495"
  PROV2496:0 "2496"
  PROV2497:0 "2497"
- PROV2498:0 "2498"
- PROV2499:0 "2499"
+ PROV2498:0 "Seeha"
+ PROV2499:0 "Karatewa"
  PROV2500:0 "2500"
- PROV2501:0 "2501"
+ PROV2501:0 "Kariwa"
  PROV2502:0 "2502"
- PROV2503:0 "2503"
+ PROV2503:0 "Ichatomi"
  PROV2504:0 "Kwistecha"
- PROV2505:0 "2505"
+ PROV2505:0 "Siawajo"
  PROV2506:0 "2506"
- PROV2507:0 "2507"
- PROV2508:0 "2508"
+ PROV2507:0 "Panaku"
+ PROV2508:0 "Notepa"
  PROV2509:0 "2509"
- PROV2510:0 "2510"
- PROV2511:0 "2511"
+ PROV2510:0 "Jikana"
+ PROV2511:0 "Nawula"
  PROV2512:0 "2512"
- PROV2513:0 "2513"
+ PROV2513:0 "Tosawak"
  PROV2514:0 "Kirisa"
  PROV2515:0 "2515"
  PROV2516:0 "2516"
  PROV2517:0 "Wakhac"
- PROV2518:0 "2518"
- PROV2519:0 "2519"
+ PROV2518:0 "Noteje"
+ PROV2519:0 "Yechaqa"
  PROV2520:0 "2520"
- PROV2521:0 "2521"
+ PROV2521:0 "Wiojoke"
  PROV2522:0 "2522"
  PROV2523:0 "2523"
  PROV2524:0 "Yakhari"
@@ -2529,22 +2529,22 @@
  PROV2528:0 "Kwachissa"
  PROV2529:0 "Ahiri"
  PROV2530:0 "2530"
- PROV2531:0 "2531"
- PROV2532:0 "2532"
- PROV2533:0 "2533"
+ PROV2531:0 "Mawakia"
+ PROV2532:0 "Bwiapala"
+ PROV2533:0 "Jamoon"
  PROV2534:0 "Kaabkicha"
  PROV2535:0 "2535"
  PROV2536:0 "2536"
  PROV2537:0 "2537"
  PROV2538:0 "2538"
  PROV2539:0 "2539"
- PROV2540:0 "2540"
- PROV2541:0 "2541"
+ PROV2540:0 "Tayamut"
+ PROV2541:0 "Baamkajok"
  PROV2542:0 "2542"
  PROV2543:0 "2543"
- PROV2544:0 "2544"
+ PROV2544:0 "Yuuma"
  PROV2545:0 "Eastern Panpallpan Sea"
- PROV2546:0 "2546"
+ PROV2546:0 "Kibipal"
  PROV2547:0 "2547"
  PROV2548:0 "2548"
  PROV2549:0 "2549"
