--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2493,18 +2493,18 @@
  PROV2492:0 "Bawamoia"
  PROV2493:0 "Tajiran"
  PROV2494:0 "2494"
- PROV2495:0 "2495"
- PROV2496:0 "2496"
+ PROV2495:0 "Muksila"
+ PROV2496:0 "Jitebi"
  PROV2497:0 "2497"
  PROV2498:0 "Seeha"
  PROV2499:0 "Karatewa"
- PROV2500:0 "2500"
+ PROV2500:0 "Supeteo"
  PROV2501:0 "Kariwa"
- PROV2502:0 "2502"
+ PROV2502:0 "Soukatome"
  PROV2503:0 "Ichatomi"
  PROV2504:0 "Kwistecha"
  PROV2505:0 "Siawajo"
- PROV2506:0 "2506"
+ PROV2506:0 "Puntatyen"
  PROV2507:0 "Panaku"
  PROV2508:0 "Notepa"
  PROV2509:0 "2509"
@@ -2521,34 +2521,34 @@
  PROV2520:0 "2520"
  PROV2521:0 "Wiojoke"
  PROV2522:0 "2522"
- PROV2523:0 "2523"
+ PROV2523:0 "Teak"
  PROV2524:0 "Yakhari"
  PROV2525:0 "Wichthara"
  PROV2526:0 "Ekhata"
  PROV2527:0 "Yahiwika"
  PROV2528:0 "Kwachissa"
  PROV2529:0 "Ahiri"
- PROV2530:0 "2530"
+ PROV2530:0 "Unyawaas"
  PROV2531:0 "Mawakia"
  PROV2532:0 "Bwiapala"
  PROV2533:0 "Jamoon"
  PROV2534:0 "Kaabkicha"
  PROV2535:0 "2535"
- PROV2536:0 "2536"
- PROV2537:0 "2537"
- PROV2538:0 "2538"
+ PROV2536:0 "Pumekwiy"
+ PROV2537:0 "Kupilan"
+ PROV2538:0 "Kosikaro"
  PROV2539:0 "2539"
  PROV2540:0 "Tayamut"
  PROV2541:0 "Baamkajok"
- PROV2542:0 "2542"
- PROV2543:0 "2543"
+ PROV2542:0 "Kuttawa"
+ PROV2543:0 "Meptuhet"
  PROV2544:0 "Yuuma"
  PROV2545:0 "Eastern Panpallpan Sea"
  PROV2546:0 "Kibipal"
  PROV2547:0 "2547"
- PROV2548:0 "2548"
- PROV2549:0 "2549"
- PROV2550:0 "2550"
+ PROV2548:0 "Attapher"
+ PROV2549:0 "Huacu"
+ PROV2550:0 "Sha'ia"
  PROV2551:0 "Tiyahkikwa"
  PROV2552:0 "2552"
  PROV2553:0 "2553"
@@ -2747,9 +2747,9 @@
  PROV2746:0 "2746"
  PROV2747:0 "2747"
  PROV2748:0 "2748"
- PROV2749:0 "2749"
- PROV2750:0 "2750"
- PROV2751:0 "2751"
+ PROV2749:0 "Eyisaw"
+ PROV2750:0 "Hekwayaar"
+ PROV2751:0 "Nah'che"
  PROV2752:0 "2752"
  PROV2753:0 "2753"
  PROV2754:0 "2754"
@@ -2841,22 +2841,22 @@
  PROV2840:0 "2840"
  PROV2841:0 "2841"
  PROV2842:0 "2842"
- PROV2843:0 "2843"
- PROV2844:0 "2844"
- PROV2845:0 "2845"
- PROV2846:0 "2846"
+ PROV2843:0 "Enyehakuch"
+ PROV2844:0 "Yu'ri"
+ PROV2845:0 "Yaqinyemi"
+ PROV2846:0 "Hatuah"
  PROV2847:0 "2847"
  PROV2848:0 "2848"
  PROV2849:0 "2849"
- PROV2850:0 "2850"
+ PROV2850:0 "Hamapall"
  PROV2851:0 "2851"
  PROV2852:0 "2852"
  PROV2853:0 "2853"
  PROV2854:0 "2854"
- PROV2855:0 "2855"
+ PROV2855:0 "Cheepumay"
  PROV2856:0 "2856"
  PROV2857:0 "2857"
- PROV2858:0 "2858"
+ PROV2858:0 "Hannahat"
  PROV2859:0 "2859"
  PROV2860:0 "2860"
  PROV2861:0 "2861"
@@ -2870,7 +2870,7 @@
  PROV2869:0 "2869"
  PROV2870:0 "2870"
  PROV2871:0 "2871"
- PROV2872:0 "2872"
+ PROV2872:0 "Chepahawenu"
  PROV2873:0 "2873"
  PROV2874:0 "2874"
  PROV2875:0 "2875"
