--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -59,7 +59,7 @@
  wessburg_area:0 "Wessburg"
  clarokammen_area:0 "Clarokammen"
  dezowagner_area:0 "Dezowagner"
- stadacona_area:0 "Stadacona"
+ starluchsem_area:0 "Starluchsem"
  kuhtirtherren_area:0 "Kuhtirtherren"
  ethedna_area:0 "Ethedna"
  deivokat_area:0 "Deivokat"
