--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -101,8 +101,8 @@
  COLONIAL_arijanes_ADJ:0 "Arijanesi"
  COLONIAL_new_oileamer:0 "New Oileamer"
  COLONIAL_new_oileamer_ADJ:0 "Oileamerian"
- COLONIAL_new_stadacona:0 "New Stadacona"
- COLONIAL_new_stadacona_ADJ:0 "Stadaconan"
+ COLONIAL_new_starluchsem:0 "New Starluchsem"
+ COLONIAL_new_starluchsem_ADJ:0 "Starluchsemian"
  COLONIAL_gross_himmelkanal:0 "Gross Himmelkanal"
  COLONIAL_gross_himmelkanal_ADJ:0 "Gross Himmelkanalan"
  COLONIAL_Root_Culture_GetName_qarabil:0 "[Root.GetAdjective] Qarabil"
