--- a/localisation/TD_01_flavour_achiqnay_l_english.yml
+++ b/localisation/TD_01_flavour_achiqnay_l_english.yml
@@ -5,3 +5,21 @@
  holy_city_reform_desc:0 "The most sacred city Achiqnay faith brings a great deal of prestige and pilgrim cash."
  exiled_colonists_reform:0 "Exiled Colonists"
  exiled_colonists_reform_desc:0 "Our people were exiled to this land after many brutal conflicts in the homeland."
+
+ achiqnatar_group_ideas:0 "Topomundi Minor Ideas"
+ achiqnatar_group_ideas_bonus:0 "Topomundi Minor Ambition"
+ achiqnatar_group_ideas_start:0 "Topomundi Minor Traditions"
+ achiqnatar_communal_food_supplies:0 "Communal Granaries"
+ achiqnatar_communal_food_supplies_desc:0 "We always believed that in order for humans to thrive they need food. If a person can't eat, they also can't work and will not contribute to our society. To grow we need every member of the community."
+ achiqnatar_nanqaqa:0 "Nanqaqa"
+ achiqnatar_nanqaqa_desc:0 "The network of roads which run across the Achiqnatar is known as Nanqana - the ridge trail. Many parts of them are said to be ancient as time and were built by God himself. These roads are essential for long range trade and communication."
+ achiqnatar_copper_merchants:0 "Copper Merchants"
+ achiqnatar_copper_merchants_desc:0 "Copper is a valuable resource thanks to its plasticity and is used for making tools, jewelry and weaponry. Large supplies of this resource reside in our mountains, and is often sold to neighboring tribes or lummaks for high prices."
+ achiqnatar_unconquerable:0 "Unconquerable"
+ achiqnatar_unconquerable_desc:0 "The outsiders often referred to us as those living in an unconquerable land. While we don't see ourselves this way and barely developed our defensive capabilities, there is no doubt that it would take a great deal of effort to attack us."
+ achiqnatar_the_heavenly_city:0 "The Heavenly City"
+ achiqnatar_the_heavenly_city_desc:0 "The holy city of Chawapar and neighboring mountain of the same name are said to be the home of God of all heavens. The annoited stewards of this city often influence local politics and are respectable among other nations."
+ achiqnatar_bid_for_the_wilakqa:0 "Bid for the Wilakqa"
+ achiqnatar_bid_for_the_wilakqa_desc:0 "Wilakqa is a title which historically was given to rulers which swore to protect the holy city from conquest and foreign influence. It often was used as an easy war justification and abused by many unholy rulers."
+ achiqnatar_contact_with_easterners:0 "Contact with the Easterners"
+ achiqnatar_contact_with_easterners_desc:0 "When the easterners, many of our people were relatively peaceful towards them and they toward us. For some time we managed to exchange our mining resources for their knowledge and innovations, which further helped us increase our production output."
