Tonatitlani Minor Ideas

--- a/localisation/TD_01_flavour_wasichantlia_l_english.yml
+++ b/localisation/TD_01_flavour_wasichantlia_l_english.yml
@@ -33,3 +33,21 @@
  xamaneh_rulers_of_atlaqotlatl_desc:0 "When People of Tonatitlan see a ship, they are sure that it is one of our own. We have an undisputed monopoly over any trade in this region and not even the Taedians will be able to break it."
  xamaneh_memories_of_easterners:0 "Memories of the Easterners"
  xamaneh_memories_of_easterners_desc:0 "Long time ago a large group of weird men came to our land, sailing on strange ships, speaking foreign language and wearing peculiar clothes. After some time it became apparent that they were the gods of death who brought with them weapons and diseases."
+ 
+ tonatitlani_group_ideas:0 "Tonatitlani Minor Ideas"
+ tonatitlani_group_ideas_start:0 "Tonatitlani Minor Traditions"
+ tonatitlani_group_ideas_bonus:0 "Tonatitlani Minor Ambition"
+ tonatitlani_legacy_of_gods_of_death:0 "Legacy of the Gods of Death"
+ tonatitlani_legacy_of_gods_of_death_desc:0 "After the Gods of Death descended upon our lands from the eastern coasts, many of our kind died from the diseases they brought by them. To make sure this doesn't happen a second time, we should invest in a series of fortifications that can withstand any siege or plague!"
+ tonatitlani_expand_the_corn_fields:0 "Expand the Corn Fields"
+ tonatitlani_expand_the_corn_fields_desc:0 "Relying on good weather can be disastrous, so if we want to prevent more famines in our lands, we should expand our corn fields, so there is always something to eat in harsher times."
+ tonatitlani_diplomacy_with_empire:0 "Diplomacy with the Empire"
+ tonatitlani_diplomacy_with_empire_desc:0 "We all are subjects to the almighty Tonatitlan empire, and if we want to stay in power, we should try to get as good relations with them as possible."
+ tonatitlani_sacrificial_rituals:0 "Sacrificial Rituals"
+ tonatitlani_sacrificial_rituals_desc:0 "Sacrificial Rituals are core part of our faith, as those are the greatest honor that can happen to our warriors. Everyone should strive to become the very best, so they, too, can become part of that honorary ritual."
+ tonatitlani_nalanaq_trade_relations:0 "Nalanaq Trade Relations"
+ tonatitlani_nalanaq_trade_relations_desc:0 "Nalanaq is a region of many riches, and if we don't want to fall behind our neighbours and rivals, we should, too, start sending caravans to the eastern jungles, and trade with locals."
+ tonatitlani_advanced_irigation:0 "Advanced Irigation"
+ tonatitlani_advanced_irigation_desc:0 "Our lands are either vast jungles or dry wastelands, so if we want to secure steady development of our nation, we need to secure the water sources. To achieve that, we must improve our irigation methods."
+ tonatitlani_legacy_of_the_empire:0 "Legacy of the Empire"
+ tonatitlani_legacy_of_the_empire_desc:0 "With the Fall of the Tonatitlan Empire to the hands of the Ueyaqneheui, many states declared themselves successors to this empire, but those are nothing but empty claims, but we are different, as we have actual army to maintain our imperial legacy."
