--- a/localisation/TD_01_flavour_wasichantlia_l_english.yml
+++ b/localisation/TD_01_flavour_wasichantlia_l_english.yml
@@ -51,3 +51,21 @@
  tonatitlani_advanced_irigation_desc:0 "Our lands are either vast jungles or dry wastelands, so if we want to secure steady development of our nation, we need to secure the water sources. To achieve that, we must improve our irigation methods."
  tonatitlani_legacy_of_the_empire:0 "Legacy of the Empire"
  tonatitlani_legacy_of_the_empire_desc:0 "With the Fall of the Tonatitlan Empire to the hands of the Ueyaqneheui, many states declared themselves successors to this empire, but those are nothing but empty claims, but we are different, as we have actual army to maintain our imperial legacy."
+ 
+ itulan_group_ideas:0 "Itulan Minor Ideas"
+ itulan_group_ideas_start:0 "Itulan Minor Traditions"
+ itulan_group_ideas_bonus:0 "Itulan Minor Ambition"
+ itulan_hit_and_run_tactics:0 "Hit and Run Tactics"
+ itulan_hit_and_run_tactics_desc:0 "Our regions is made mostly of jungles, hills, and mountains, so we developed a hit and run tactics to utilize the defensive potential of this terrain to it's fullest."
+ itulan_remember_our_cradle:0 "Remember Our Cradle"
+ itulan_remember_our_cradle_desc:0 "Altough we now live along the Laabkot mountains, we can't forget where our ancestors came from, and we need to do everything to cherish our heritage."
+ itulan_across_laabkot:0 "Across Laabkot"
+ itulan_across_laabkot_desc:0 "We and our brethren live all across Laabkot mountains, controlling every key passage that exists on those mountains, and so, we naturally control most of the trade between Nalanaq and eastern coast tribes."
+ itulan_lummak_connections:0 "Lummak Connections"
+ itulan_lummak_connections_desc:0 "With close proximity of Lummak Mythology to our lands, and many of our tribesmen converting to it, we started an interfaith exchange with them, which helped us see the world from a new perspective!"
+ itulan_modern_diplomacy:0 "Modern Diplomacy"
+ itulan_modern_diplomacy_desc:0 "If we want to preserve our way of life, and not end up crushed under forgeiners, we need to modernize our diplomacy, so it doesn't fall behind rest of the world."
+ itulan_advanced_fortifications:0 "Advanced Fortifications"
+ itulan_advanced_fortifications_desc:0 "With many cases where Hit and Run tactics have failed us, we had to resort to defending ourselves in fortresses and other fortifications. With time, we naturally started picked up art of making better fortifications."
+ itulan_second_coming_of_easterners:0 "Second Coming of Easterners"
+ itulan_second_coming_of_easterners_desc:0 "Many of us thought that stories about 'Gods of Death' from the east was nothing more than a fairytale, used to frighten small children, but now they are back, and want to conquer us, but they will meet our fierce resistance."
